--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".CollaseToolbarActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
