--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:name=".ToolbarActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".VolleyActivity"/>
+        <activity android:name=".JsonActivity"/>
     </application>
 
 </manifest>
