--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile "org.androidannotations:androidannotations-api:$AAVersion"
     compile files('libs/volley.jar')
     compile 'com.alibaba:fastjson:1.2.7'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
 }
 
 apt {
