--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".CustomApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -30,6 +31,7 @@
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity android:name=".VolleyActivity"/>
         <activity android:name=".JsonActivity"/>
+        <activity android:name=".PictureDownloadActivity"/>
     </application>
 
 </manifest>
